Fixes body text contrast

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body.is-loading *, body.is-loading *:before, body.is-loading *:after {
 }
 
 body, input, select, textarea {
-    color: #a2a2a2;
+    color: #222;
     font-family: Helvetica, sans-serif;
     font-size: 16pt;
     font-weight: 400;
